[gd_scene load_steps=10 format=3 uid="uid://b0otxfha046rb"]

[ext_resource type="Script" uid="uid://bf6t2yiqdwb1o" path="res://scripts/level.gd" id="1_6cjw3"]
[ext_resource type="TileSet" uid="uid://blhd0ogpuydej" path="res://assets/tilesets/tiles_spikes.tres" id="1_vvcwp"]
[ext_resource type="TileSet" uid="uid://dn505hopwb4de" path="res://assets/tilesets/tiles_items.tres" id="2_d61h5"]
[ext_resource type="Texture2D" uid="uid://5q57n61fa6ln" path="res://assets/environment/back.png" id="2_dje0g"]
[ext_resource type="TileSet" uid="uid://dhxw3f8l2saqn" path="res://assets/tilesets/tiles_world.tres" id="3_6cjw3"]
[ext_resource type="PackedScene" uid="uid://dy7t3058n5tcv" path="res://scenes/player.tscn" id="5_dje0g"]
[ext_resource type="PackedScene" uid="uid://c171pqodkpb32" path="res://scenes/ui/HUD.tscn" id="7_g7p6o"]
[ext_resource type="AudioStream" uid="uid://cs7l2kwxorwuh" path="res://assets/audio/Grasslands Theme.ogg" id="8_40ga3"]
[ext_resource type="PackedScene" uid="uid://dvsqy3yiish2d" path="res://scenes/levels/ladders.tscn" id="9_icy5c"]

[node name="level" type="Node2D"]
script = ExtResource("1_6cjw3")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(576, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_dje0g")

[node name="Danger" type="TileMap" parent="."]
tile_set = ExtResource("1_vvcwp")
format = 2

[node name="Items" type="TileMap" parent="."]
tile_set = ExtResource("2_d61h5")
format = 2
layer_0/tile_data = PackedInt32Array(-65544, 0, 0, -9, 327683, 12, -65530, 327683, 12, 6, 327683, 12, 65542, 327683, 12, 131063, 327683, 12, 65527, 327683, 12, -6, 589827, 7, -131070, 983043, 6, -65534, 983043, 7, -131069, 1048579, 6, -65533, 1048579, 7, -131068, 1114115, 6, -65532, 1114115, 7, -196616, 458755, 4, -131080, 458755, 5, -262151, 524291, 3, -196615, 524291, 4, -131079, 524291, 5, -327686, 589827, 2, -262150, 589827, 3, -196614, 589827, 4, -131078, 589827, 5, -65542, 589827, 6, -327685, 655363, 2, -262149, 655363, 3, -196613, 655363, 4, -131077, 655363, 5, -65541, 655363, 6, -5, 655363, 7, -327684, 720899, 2, -262148, 720899, 3, -196612, 720899, 4, -131076, 720899, 5, -65540, 720899, 6, -4, 720899, 7, -327683, 786435, 2, -262147, 786435, 3, -196611, 786435, 4, -131075, 786435, 5, -3, 786435, 7, -262146, 851971, 3, -196610, 851971, 4, -131074, 851971, 5, -196609, 917507, 4)

[node name="World" type="TileMap" parent="."]
tile_set = ExtResource("3_6cjw3")
format = 2
layer_0/tile_data = PackedInt32Array(65535, 65536, 1, 0, 65536, 1, 1, 65536, 1, 2, 65536, 1, 65534, 65536, 1, 65533, 65536, 1, 65532, 327680, 1, 65531, 327680, 1, 65530, 65536, 1, 65529, 327680, 1, 65528, 65536, 1, 3, 327680, 1, 4, 327680, 1, 5, 65536, 1, 131070, 327680, 7, 131071, 327680, 7, 65536, 65536, 5, 65537, 327680, 7, 65538, 196608, 5, 65539, 458752, 7, 65540, 327680, 5, 65541, 196608, 5, 131064, 327680, 5, 131065, 327680, 7, 131066, 327680, 7, 131067, 458752, 7, 131068, 327680, 5, 131069, 65536, 5, -8, 720896, 10, -65531, 196608, 7)

[node name="Player" parent="." instance=ExtResource("5_dje0g")]

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(-100, -3)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("7_g7p6o")]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_40ga3")

[node name="Ladders" parent="." instance=ExtResource("9_icy5c")]

[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="body_entered" from="Ladders" to="." method="_on_ladders_body_entered"]
[connection signal="body_exited" from="Ladders" to="." method="_on_ladders_body_exited"]
